# pos-react-tauri-2.0

./: .db-schema  .erd  .excalidraw  .gitignore  .todo  README.md  app_data.sqlite3  package-lock.json  package.json
src/: App.tsx  main.tsx  runSql.ts
src-tauri/: Cargo.toml  app_data.sqlite3  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  sqlite.rs
src/auth/: auth-context.tsx
src/components/: date-picker-single.tsx  export-dialog.tsx  mode-toggle.tsx  nav-projects.tsx  nav-user.tsx  pagination-section.tsx  theme-provider.tsx
src/components/ui/: input.tsx
src/context/: auth-context.tsx  document-path-context.tsx  low-stock-context.tsx  pos-context.tsx  store-info-context.tsx
src/layouts/: app-sidebar.tsx  layout.tsx  loading-screen.tsx  logout-button.tsx  store-info-context.tsx
src/lib/: generate-fake-data.ts  init-database.ts  schema.ts  utils.ts
src/pages/analytics/: page.tsx  sales-area-chart.tsx  top-products-bar-chart.tsx
src/pages/auth/: login.tsx
src/pages/categories/: page.tsx
src/pages/dashboard/: low-stock-detector.tsx  page.tsx  profit-chart.tsx  sales-area-chart.tsx  sales-by-category-pie-chart.tsx  summary-cards.tsx  top-products-bar-chart.tsx
src/pages/inventory/: adjust-inventory.tsx  delete-product.tsx  detect-zero-price-products.tsx  edit-product.tsx  export-dialog.tsx  new-product.tsx  page.tsx
src/pages/invoices/: export-invoice-dialog.tsx  invoice-export-dialog.tsx  invoice-print-dialog.tsx  page.tsx
src/pages/invoices_old/: invoice-export-dialog.tsx  invoice-print-dialog.tsx  page.tsx
src/setup/: owner.tsx  store.tsx
(+38 files in other folders)
