[package]
name = "nvl-store"
version = "1.0.1"
description = "A POS for NVL"
authors = ["jervi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pos_react_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
tauri = { version = "2.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0.0-beta.8" # Latest beta version
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0"

[features]
default = ["custom-protocols"]
custom-protocols = ["tauri/custom-protocol"]
